test/errors/resolution/laterVar.compopts
--detailed-errors # laterVar-detailed.good
--no-detailed-errors # laterVar-brief.good
